--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "chromatic": "npx chromatic --project-token=21a37a153655"
   },
   "dependencies": {
     "react": "^17.0.2",
@@ -25,6 +26,7 @@
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.1",
     "babel-loader": "^8.2.3",
+    "chromatic": "^6.3.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
